Multiple Configurations in the backend possible